tests/ui/test_fail/04-bad-sync-cond.stderr
error: Wrong name for name-value pair: unknown
  --> tests/ui/test_fail/04-bad-sync-cond.rs:13:10
   |
13 |     sync(unknown = "is_sync"),
   |          ^^^^^^^^^^^^^^^^^^^
